# DesignPatternsTest

./: .gitignore  CMakeLists.txt
DesignPatternsTest/: CMakeLists.txt  DesignPatternsTest.cpp  DesignPatternsTest.h
