# CMakeList.txt : CMake project for DesignPatternsTest, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (DesignPatternsTest "DesignPatternsTest.cpp" "DesignPatternsTest.h")

# Via outsourced DLL 
add_library(SharedLib SHARED IMPORTED)
# Set location of phyisical dlls and libs
set(LIBRARY_ROOT "C:/Users/kev/source/cpp_design_patterns/install")
set_property(TARGET SharedLib PROPERTY IMPORTED_IMPLIB_RELEASE ${LIBRARY_ROOT}/lib/Libraries.lib)
set_property(TARGET SharedLib PROPERTY IMPORTED_LOCATION_RELEASE ${LIBRARY_ROOT}/bin/Libraries.dll)
set_property(TARGET SharedLib PROPERTY IMPORTED_IMPLIB_DEBUG ${LIBRARY_ROOT}/lib/Libraries.lib)
set_property(TARGET SharedLib PROPERTY IMPORTED_LOCATION_DEBUG ${LIBRARY_ROOT}/bin/Libraries.dll)
set_property(TARGET SharedLib PROPERTY IMPORTED_IMPLIB ${LIBRARY_ROOT}/lib/Libraries.lib)
set_property(TARGET SharedLib PROPERTY IMPORTED_LOCATION ${LIBRARY_ROOT}/bin/Libraries.dll)

target_include_directories(SharedLib INTERFACE "C:/Users/kev/source/cpp_design_patterns/install/include")
target_link_libraries(DesignPatternsTest PUBLIC SharedLib)

# Copy dll to build
add_custom_command ( TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    $<TARGET_FILE:SharedLib> $<TARGET_FILE_DIR:${PROJECT_NAME}>
)


# Via cmake find_packge
target_link_libraries(DesignPatternsTest PUBLIC DesignPatterns_Basic)


# Via pkg-config
# ${IDIOMS_XXX} are auto generated by the PkgConfig when project is successfully loaded
target_include_directories(PkgConfig::IDIOMS INTERFACE ${IDIOMS_INCLUDE_DIRS})
target_link_libraries(DesignPatternsTest PUBLIC ${IDIOMS_LINK_LIBRARIES})

message(${DESIGN_CREATIONAL_LINK_LIBRARIES})
target_include_directories(PkgConfig::DESIGN_CREATIONAL INTERFACE ${DESIGN_CREATIONAL_INCLUDE_DIRS})

# Workaround since PkgConfig imported project does not return proper lib file 
target_include_directories(${PROJECT_NAME} PRIVATE ${DESIGN_CREATIONAL_INCLUDE_DIRS})

target_link_libraries(DesignPatternsTest PUBLIC ${DESIGN_CREATIONAL_LINK_LIBRARIES})
